force-app/main/default/objects/b3d__General_Settings__c/b3d__General_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>3B Document Generation/Electronic Signature Settings</description>
    <label>General Settings</label>
</CustomObject>