force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__API_Password__c.field-meta.xml
<CustomField>
    <fullName>b3d__API_Password__c</fullName>
    <label>DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>