force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__API_Username__c.field-meta.xml
<CustomField>
    <fullName>b3d__API_Username__c</fullName>
    <label>DEPRECATED</label>
    <type>Email</type>
</CustomField>