force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__Authorization_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>b3d__Authorization_Named_Credential__c</fullName>
    <defaultValue>&quot;AuthorizationService&quot;</defaultValue>
    <label>DEPRECATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>