force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__Customer_Logo__c.field-meta.xml
<CustomField>
    <fullName>b3d__Customer_Logo__c</fullName>
    <label>Customer Logo</label>
    <type>Url</type>
</CustomField>