force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__Disable_Query_Trigger__c.field-meta.xml
<CustomField>
    <fullName>b3d__Disable_Query_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Query Trigger</label>
    <type>Checkbox</type>
</CustomField>