force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__Do_Not_Allow_Typed_Signatures__c.field-meta.xml
<CustomField>
    <fullName>b3d__Do_Not_Allow_Typed_Signatures__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, only drawn signatures will be allowed</inlineHelpText>
    <label>Do Not Allow Typed Signatures</label>
    <type>Checkbox</type>
</CustomField>