force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__PDF_Gen_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>b3d__PDF_Gen_Base_URL__c</fullName>
    <inlineHelpText>A salesforce site url</inlineHelpText>
    <label>PDF Gen Base URL</label>
    <type>Url</type>
</CustomField>