force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__PDF_Service__c.field-meta.xml
<CustomField>
    <fullName>b3d__PDF_Service__c</fullName>
    <defaultValue>&quot;https://www.3bapi.com/v2/html-to-pdf/async&quot;</defaultValue>
    <label>PDF Service</label>
    <required>true</required>
    <type>Url</type>
</CustomField>