force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__X3B_Sign_API_Endpint__c.field-meta.xml
<CustomField>
    <fullName>b3d__X3B_Sign_API_Endpint__c</fullName>
    <defaultValue>&quot;https://app.3bdocs.com/api&quot;</defaultValue>
    <inlineHelpText>Usually https://app.3bdocs.com/api</inlineHelpText>
    <label>3B Sign API Endpint</label>
    <type>Url</type>
</CustomField>