force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__X3B_Sign_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>b3d__X3B_Sign_Base_URL__c</fullName>
    <defaultValue>&quot;https://app.3bdocs.com&quot;</defaultValue>
    <label>3B Sign Base URL</label>
    <type>Url</type>
</CustomField>