force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__X3B_Sign_Generates_PDFs__c.field-meta.xml
<CustomField>
    <fullName>b3d__X3B_Sign_Generates_PDFs__c</fullName>
    <defaultValue>true</defaultValue>
    <label>3B Sign Generates PDFs</label>
    <type>Checkbox</type>
</CustomField>