force-app/main/default/objects/b3d__General_Settings__c/fields/b3d__X3B_Sign_Submit_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>b3d__X3B_Sign_Submit_Endpoint__c</fullName>
    <defaultValue>&quot;https://app.3bdocs.com/s/&quot;</defaultValue>
    <inlineHelpText>This is the endpoint in 3B Sign used for submitting document invitations</inlineHelpText>
    <label>DEPRECATED</label>
    <type>Url</type>
</CustomField>